Validate, Error handle, refactors
