# src/database/schema.js
@@ -8,24 +8,25 @@ const employeeSchema = new Schema({
   last_name: { type: String, required: true },
   email: { type: String, required: true },
   gender: { type: String, required: true },
-  avatar: { type: String, required: true },
   job: { type: String, required: true },
-  start_date: { type: Date, required: true },
   birthday: { type: Date, required: true },
+  start_date: { type: Date, required: true },
 });
 
 const employee = model("employee", employeeSchema);
 
-const projectSchema = new Schema({
-  name: { type: String, required: true },
-  description: { type: String, required: true },
-  client: { type: String, required: true },
-  employee_id: { type: Schema.Types.Number, ref: "employee"},
+const clientSchema = new Schema({
+  client_id: { type: Number, required: true },
+  first_name: { type: String, required: true },
+  last_name: { type: String, required: true },
+  company: { type: String, required: true },
+  phone: { type: String, required: true },
+  email: { type: String, required: true },
 });
 
-const project = model("project", projectSchema);
+const client = model("client", clientSchema);
 
 module.exports = {
   employee,
-  project
+  client
 }
