# src/middleware/swagger_output.json
@@ -13,8 +13,8 @@
       "description": "Employee related endpoints"
     },
     {
-      "name": "Projects",
-      "description": "Project related endpoints"
+      "name": "Clients",
+      "description": "Client related endpoints"
     }
   ],
   "schemes": [
@@ -89,6 +89,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
           }
         }
       }
@@ -129,6 +132,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
@@ -160,11 +166,14 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
     },
-    "/api/projects/": {
+    "/api/clients/": {
       "get": {
         "tags": [
           "Departments"
@@ -173,6 +182,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
@@ -181,17 +193,31 @@
           "Departments"
         ],
         "description": "",
+        "parameters": [
+          {
+            "name": "Body",
+            "in": "body",
+            "description": "Add client",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Client"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
           }
         }
       }
     },
-    "/api/projects/{id}": {
+    "/api/clients/{id}": {
       "get": {
         "tags": [
           "Departments"
@@ -208,6 +234,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
@@ -227,6 +256,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
@@ -241,6 +273,15 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "Body",
+            "in": "body",
+            "description": "Update client details by client id",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Client"
+            }
           }
         ],
         "responses": {
@@ -249,6 +290,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
@@ -285,6 +329,35 @@
         "job": {
           "type": "string",
           "example": "Environmental Specialist"
+        }
+      }
+    },
+    "Client": {
+      "type": "object",
+      "properties": {
+        "client_id": {
+          "type": "number",
+          "example": 1
+        },
+        "first_name": {
+          "type": "string",
+          "example": "John"
+        },
+        "last_name": {
+          "type": "string",
+          "example": "Doe"
+        },
+        "email": {
+          "type": "string",
+          "example": "johndoe@example.com"
+        },
+        "company": {
+          "type": "string",
+          "example": "Acme Inc."
+        },
+        "phone": {
+          "type": "string",
+          "example": "555-555-5555"
         }
       }
     }
